Fixing alignment issues on mobile for section bodies and titles. Adding title underlines

--- a/assets/stylesheets/partials/_base.scss
+++ b/assets/stylesheets/partials/_base.scss
@@ -53,6 +53,9 @@ body {
     
 }
 
+h5 {
+  font-size: 24px;
+}
 
 .avatar {
   text-align: center;
